@@ -5,6 +5,7 @@ table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/artyOutpost2"
 table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/beaconedAssembler"))
 table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/buffer"))
 table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/chemicalPlant"))
+table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/combinators"))
 table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/concreteStumps"))
 table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/crashedTank"))
 table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/crossOfPipes"))
@@ -37,8 +38,10 @@ table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/miningSetup4"
 table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/nuclearAccident"))
 table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/offshorePump"))
 table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/oilPumpjack"))
+table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/oilPumpjack2"))
 table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/oilRefinery"))
 table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/oilRefinery2"))
+table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/pipeline"))
 table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/pollutedWater"))
 table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/railSection"))
 table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/railSection2"))
@@ -53,6 +56,7 @@ table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/researchStati
 table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/researchStation4"))
 table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/researchStation5"))
 table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/robotCraft"))
+table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/robots"))
 table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/rocketFuel"))
 table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/rockStash"))
 table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/rockStash2"))
@@ -84,10 +88,12 @@ table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/smeltery"))
 table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/smeltery2"))
 table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/smeltery3"))
 table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/solarAccu"))
+table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/solarAccu2"))
 table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/spidertronCorpse"))
 table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/splitterI"))
 table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/splitterI2"))
 table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/splitterI3"))
+table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/steamPower"))
 table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/swamp"))
 table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/twinLasers"))
 table.insert(s_ruins, require("__AbandonedRuins__/ruins/smallRuins/twinTurrets"))
