@@ -1,0 +1,14 @@
+return
+{
+  entities =
+  {
+    {"pipe-to-ground", {x = -2.5, y = -1.5}, {dir = "east", dead = 0.3}},
+    {"small-electric-pole-remnants", {x = -0.5, y = -0.5}, {}},
+    {"pump", {x = -1, y = -1.5}, {dir = "east", dead = 0.1}},
+    {"pipe-to-ground", {x = 0.5, y = -1.5}, {dir = "west", dmg = {dmg = {type = "random", min = 0, max = 80}}, dead = 0.3}},
+    {"pipe-to-ground", {x = -2.5, y = 0.5}, {dir = "east", dead = 0.3}},
+    {"pump", {x = -1, y = 0.5}, {dir = "east", dead = 0.1}},
+    {"pipe-to-ground", {x = 0.5, y = 0.5}, {dir = "west", dead = 0.3}},
+    {"pipe-to-ground", {x = 3.5, y = 0.5}, {dir = "east", dmg = {dmg = {type = "random", min = 0, max = 80}}, dead = 0.3}},
+  },
+}
