@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.5
 Date: ????
+  Features:
+    - Added 6 small ruins. 
   Changes:
     - Reduced the amount of power poles in ruins.
 ---------------------------------------------------------------------------------------------------
